--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+/* start-structural-setting */
 *{
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
     
 }
+/* end-structural-setting */
 
+/* start-header-setting */
 header{
     height: 170px;
     background-image: url(../img/pattern.png);
@@ -18,11 +21,15 @@ header{
    
     
 }
+/* end-header-setting */
 
+/* start-main-setting */
 main{
     margin-left: 5px;
 }
+/* end-main-setting */
 
+/* start-first-section-setting */
 .main-title{
     font-size: 3rem;
 }
@@ -40,3 +47,16 @@ main{
 #date{
     font-size: 0.8rem;
 }
+/* end-first-section-setting */
+
+/* start-img-section-setting */
+.tim-img{
+    height: 450px;
+    width: 48%;
+    margin-top: 20px;
+}
+
+.img-insertion{
+    font-size: 0.85rem;
+}
+/* end-img.section-setting */
