--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,40 @@ th{
 td{
     font-size: 1.5rem;
 }
+/* end-table-setting */
+.last-text{
+    font-size: 1.5em;
+    margin-top: 40px;
+    
+}
 
+.footer-title{
+    font-size: 2rem;
+    color: lightslategray;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
 
+.img-first{
+    background-image: url(../img/monitor.jpg);
+    width: 30%;
+    height: 400px;
+    background-size: contain;
+    text-align: center;
+    font-size: 3rem;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.img-second{
+    background-image: url(../img/graph.jpg);
+    width: 30%;
+    height: 300px;
+    background-size: contain;
+    text-align: center;
+    font-size: 3rem;
+    color: white;
+}
 
     
     
